--- a/css/output.css
+++ b/css/output.css
@@ -538,12 +538,12 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.col-span-full {
-  grid-column: 1 / -1;
-}
-
 .col-span-1 {
   grid-column: span 1 / span 1;
+}
+
+.col-span-full {
+  grid-column: 1 / -1;
 }
 
 .m-auto {
@@ -562,190 +562,100 @@ video {
   display: none;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.h-\[100\%\] {
-  height: 100%;
-}
-
 .h-\[100vh\] {
   height: 100vh;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.h-\[fit-content\] {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.h-\[54rem\] {
-  height: 54rem;
 }
 
 .h-\[5\.4rem\] {
   height: 5.4rem;
 }
 
-.min-h-full {
-  min-height: 100%;
+.h-full {
+  height: 100%;
 }
 
-.min-h-\[50rem\] {
-  min-height: 50rem;
+.max-h-full {
+  max-height: 100%;
 }
 
-.min-h-\[100\%\] {
-  min-height: 100%;
+.max-h-\[70rem\] {
+  max-height: 70rem;
 }
 
-.min-h-\[100vh\] {
-  min-height: 100vh;
+.max-h-\[60rem\] {
+  max-height: 60rem;
 }
 
-.w-3 {
-  width: 1.5rem;
+.max-h-\[50rem\] {
+  max-height: 50rem;
 }
 
-.w-5 {
-  width: 2.5rem;
+.max-h-\[55rem\] {
+  max-height: 55rem;
 }
 
-.w-8 {
-  width: 4rem;
+.max-h-\[58rem\] {
+  max-height: 58rem;
 }
 
-.w-\[4rem\] {
-  width: 4rem;
+.max-h-\[80\%\] {
+  max-height: 80%;
 }
 
-.w-\[6rem\] {
-  width: 6rem;
+.max-h-\[70\%\] {
+  max-height: 70%;
 }
 
-.w-\[10rem\] {
-  width: 10rem;
+.max-h-\[65\%\] {
+  max-height: 65%;
 }
 
-.w-\[15rem\] {
-  width: 15rem;
+.max-h-\[60\%\] {
+  max-height: 60%;
 }
 
-.w-\[18rem\] {
-  width: 18rem;
+.max-h-\[50\%\] {
+  max-height: 50%;
 }
 
-.w-full {
-  width: 100%;
+.max-h-\[55\%\] {
+  max-height: 55%;
 }
 
-.w-\[8rem\] {
-  width: 8rem;
-}
-
-.w-\[30rem\] {
-  width: 30rem;
-}
-
-.w-\[35rem\] {
-  width: 35rem;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-\[fit-content\] {
-  width: -moz-fit-content;
-  width: fit-content;
+.max-h-\[58\%\] {
+  max-height: 58%;
 }
 
 .w-\[13rem\] {
   width: 13rem;
 }
 
-.min-w-\[35rem\] {
-  min-width: 35rem;
+.w-\[8rem\] {
+  width: 8rem;
 }
 
-.max-w-\[35rem\] {
-  max-width: 35rem;
-}
-
-.max-w-\[38rem\] {
-  max-width: 38rem;
-}
-
-.max-w-\[40rem\] {
-  max-width: 40rem;
-}
-
-.max-w-\[45rem\] {
-  max-width: 45rem;
+.w-full {
+  width: 100%;
 }
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.grid-cols-\[1fr_2fr\] {
-  grid-template-columns: 1fr 2fr;
-}
-
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
-.grid-rows-2 {
-  grid-template-rows: repeat(2, minmax(0, 1fr));
-}
-
-.grid-rows-4 {
-  grid-template-rows: repeat(4, minmax(0, 1fr));
-}
-
-.grid-rows-\[1fr_2fr\] {
-  grid-template-rows: 1fr 2fr;
-}
-
-.grid-rows-\[1fr_2f3\] {
-  grid-template-rows: 1fr 2f3;
 }
 
 .grid-rows-\[1fr_3fr\] {
   grid-template-rows: 1fr 3fr;
 }
 
-.grid-rows-\[2fr_3fr\] {
-  grid-template-rows: 2fr 3fr;
-}
-
-.grid-rows-none {
-  grid-template-rows: none;
-}
-
 .flex-col {
   flex-direction: column;
 }
 
-.place-items-center {
-  place-items: center;
-}
-
-.items-start {
-  align-items: flex-start;
-}
-
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-center {
@@ -756,97 +666,44 @@ video {
   justify-content: space-between;
 }
 
-.gap-3 {
-  gap: 1.5rem;
-}
-
 .gap-2 {
   gap: 1rem;
 }
 
-.gap-5 {
-  gap: 2.5rem;
-}
-
-.gap-\[5rem\] {
-  gap: 5rem;
-}
-
-.gap-1 {
-  gap: 0.5rem;
-}
-
-.gap-\[1\.5rem\] {
+.gap-3 {
   gap: 1.5rem;
-}
-
-.gap-\[1\.2rem\] {
-  gap: 1.2rem;
-}
-
-.gap-\[1rem\] {
-  gap: 1rem;
-}
-
-.gap-\[3rem\] {
-  gap: 3rem;
 }
 
 .gap-\[2\.5rem\] {
   gap: 2.5rem;
 }
 
-.self-start {
-  align-self: flex-start;
+.overflow-scroll {
+  overflow: scroll;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
+.overflow-y-auto {
+  overflow-y: auto;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
 }
 
 .rounded {
   border-radius: 0.25rem;
 }
 
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
-.rounded-\[1\.5rem\] {
-  border-radius: 1.5rem;
-}
-
-.border-2 {
-  border-width: 0.2rem;
-}
-
-.border-l-2 {
-  border-left-width: 0.2rem;
-}
-
-.border-l-3 {
-  border-left-width: 0.3rem;
-}
-
-.border-l-\[3rem\] {
-  border-left-width: 3rem;
-}
-
-.border-l-\[0\.4rem\] {
-  border-left-width: 0.4rem;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border-l-\[0\.5rem\] {
   border-left-width: 0.5rem;
-}
-
-.border-orange {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 181 69 / var(--tw-border-opacity));
 }
 
 .border-green {
@@ -854,8 +711,14 @@ video {
   border-color: rgb(0 196 106 / var(--tw-border-opacity));
 }
 
-.bg-lighter-gray {
-  background-color: rgb(var(--lighter-gray));
+.border-orange {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 181 69 / var(--tw-border-opacity));
+}
+
+.bg-dark-1 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 52 57 / var(--tw-bg-opacity));
 }
 
 .bg-dark-2 {
@@ -868,47 +731,16 @@ video {
   background-color: rgb(170 170 170 / var(--tw-bg-opacity));
 }
 
-.bg-dark-1 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(45 52 57 / var(--tw-bg-opacity));
-}
-
 .p-3 {
   padding: 1.5rem;
-}
-
-.p-2 {
-  padding: 1rem;
-}
-
-.p-1 {
-  padding: 0.5rem;
-}
-
-.p-\[0\.5\] {
-  padding: 0.5;
-}
-
-.p-5 {
-  padding: 2.5rem;
 }
 
 .p-4 {
   padding: 2rem;
 }
 
-.p-7 {
-  padding: 3.5rem;
-}
-
-.py-5 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-7 {
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
+.p-5 {
+  padding: 2.5rem;
 }
 
 .px-3 {
@@ -916,58 +748,25 @@ video {
   padding-right: 1.5rem;
 }
 
-.py-3 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-4 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.py-7 {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
 }
 
 .pl-1 {
   padding-left: 0.5rem;
 }
 
-.pl-2 {
-  padding-left: 1rem;
-}
-
 .pr-2 {
   padding-right: 1rem;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-start {
-  text-align: start;
-}
-
-.text-xl {
-  font-size: 1.8rem;
-}
-
-.text-2xl {
-  font-size: 2rem;
-}
-
-.text-4xl {
-  font-size: 3rem;
 }
 
 .text-base {
   font-size: 1.5rem;
 }
 
-.text-sm {
-  font-size: 1.2rem;
-}
-
-.font-bold {
-  font-weight: 700;
+.text-xl {
+  font-size: 1.8rem;
 }
 
 .font-medium {
@@ -978,31 +777,40 @@ video {
   text-transform: uppercase;
 }
 
-.text-lighter-gray {
-  color: rgb(var(--lighter-gray));
-}
-
-.text-dark-1 {
-  --tw-text-opacity: 1;
-  color: rgb(45 52 57 / var(--tw-text-opacity));
-}
-
 .text-dark-2 {
   --tw-text-opacity: 1;
   color: rgb(66 72 77 / var(--tw-text-opacity));
 }
 
-@media (min-width: 1280px) {
-  .xl\:col-span-3 {
-    grid-column: span 3 / span 3;
-  }
+.text-lighter-gray {
+  color: rgb(var(--lighter-gray));
+}
 
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media (min-width: 1280px) {
   .xl\:col-span-2 {
     grid-column: span 2 / span 2;
-  }
-
-  .xl\:col-span-1 {
-    grid-column: span 1 / span 1;
   }
 
   .xl\:col-span-4 {
@@ -1013,49 +821,20 @@ video {
     margin: 0;
   }
 
-  .xl\:mx-\[0\] {
-    margin-left: 0;
-    margin-right: 0;
+  .xl\:max-w-\[35rem\] {
+    max-width: 35rem;
   }
 
   .xl\:max-w-\[41rem\] {
     max-width: 41rem;
   }
 
-  .xl\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .xl\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
-  .xl\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .xl\:grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
-  }
-
   .xl\:grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
-  .xl\:grid-rows-1 {
-    grid-template-rows: repeat(1, minmax(0, 1fr));
-  }
-
   .xl\:grid-rows-none {
     grid-template-rows: none;
-  }
-
-  .xl\:items-start {
-    align-items: flex-start;
-  }
-
-  .xl\:justify-start {
-    justify-content: flex-start;
   }
 
   .xl\:self-center {
@@ -1065,28 +844,9 @@ video {
   .xl\:p-7 {
     padding: 3.5rem;
   }
-
-  .xl\:p-5 {
-    padding: 2.5rem;
-  }
-
-  .xl\:px-5 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
-  .xl\:px-7 {
-    padding-left: 3.5rem;
-    padding-right: 3.5rem;
-  }
 }
 
 @media (min-width: 1440px) {
-  .\32xl\:px-7 {
-    padding-left: 3.5rem;
-    padding-right: 3.5rem;
-  }
-
   .\32xl\:px-5 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
