--- a/css/output.css
+++ b/css/output.css
@@ -606,6 +606,10 @@ video {
   width: 100%;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -723,6 +727,22 @@ video {
 
 .text-xl {
   font-size: 1.8rem;
+}
+
+.text-3xl {
+  font-size: 2.5rem;
+}
+
+.text-2xl {
+  font-size: 2rem;
+}
+
+.text-sm {
+  font-size: 1.2rem;
+}
+
+.text-\[1\.65rem\] {
+  font-size: 1.65rem;
 }
 
 .font-medium {
